--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Spectral
+title: Bathrooms of distinction
 baseurl: /
 permalink: '/:title/'
 landing_template: home
@@ -22,8 +22,8 @@ palettes:
       accent6: '#ed4933'
 sass:
   indentWidth: 4
-  style: nested
   precision: 10
+  style: nested
 plugins:
   - jekyll-menus
 exclude:
@@ -40,6 +40,3 @@ exclude:
   - netlify.toml
   - stackbit-build.sh
   - stackbit-pull.js
-collections:
-  posts:
-    permalink: '/posts/:title/'
