Update Footer Configuration “footer”

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -18,4 +18,4 @@ copyright: '&copy; Spectral'
 links:
   - new_window: true
     text: 'Website designed by #esc'
-    url: 'https://eaglesoftware.tech'
+    url: 'http://eaglesoftware.tech'
