Update config “config”

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Bathrooms
 baseurl: /
 permalink: '/:title/'
 landing_template: home
-palette: blue
+palette: green
 palettes:
   blue:
     sass:
