Update Footer Configuration “footer”

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -14,7 +14,7 @@ social_icons:
   - icon: fa-envelope-o
     title: Email
     url: '#'
-copyright: '&copy; Spectral'
+copyright: '&copy; Bathrooms '
 links:
   - new_window: true
     text: 'Website designed by #esc'
